2007-12-06  Martin Lambers <marlam@marlam.de>

	* mhlib/mh_os.h: Add MH_STDIN, MH_STDOUT.

2007-11-08  Martin Lambers <marlam@marlam.de>

	* src/view_area.cpp: Fix export of whole image if it is stored in a
	CVL_LUM frame.
	* src/conf.cpp: Save doubles with enough precision.

2007-10-28  Martin Lambers <marlam@marlam.de>

	* src/range_selector.cpp: Fix resetting of histogram bounds for color
	images.

2007-10-18  Martin Lambers <marlam@marlam.de>

	* src/range_selector.h, src/range_selector.cpp: Allow much more
	fine-grained control over the histogram and the range selection.
	* src/range_selector.cpp: Update view when changing upper and lower
	bounds of the histogram.
	* src/range_selector.cpp: Tweak layout. Fix initial display of lower
	and upper bound.
	* src/range_selector.cpp: Fix range properly when updating the
	histogram bounds.
	* NEWS, doc/cvlview.texi: Update for 0.2.0.

2007-10-17  Martin Lambers <marlam@marlam.de>

	* src/viewpoint_selector.cpp, src/channel_selector.cpp: Update and add
	keyboard shortcuts.
	* src/cvlview.h, src/cvlview.cpp, src/dataset_selector.h,
	src/dataset_selector.cpp, src/Makefile.am, src/cvlview.qrc, src/icons,
	src/icons/prev.png, src/icons/next.png: Move data set switching to
	toolbar buttons.
	* src/cvlview.cpp: Add new filter "All supported files" to open
	dialog.
	* src/cvlview.cpp, src/interpolation_selector.cpp: Shorten the button
	to save space.
	* src/viewpoint_selector.cpp: Change keyboard shortcut to avoid
	collision.

2007-10-16  Martin Lambers <marlam@marlam.de>

	* src/interpolation_selector.cpp, src/viewpoint_selector.cpp: Add
	keyboard shortcuts to buttons.
	* src/pseudocolor_selector.cpp, src/frame_info.h,
	src/channel_selector.h, src/datafile.h, src/cvlview.cpp, src/main.cpp,
	src/interpolation_selector.cpp, src/gamma_selector.h,
	src/channel_info.h, src/viewpoint_selector.h, src/range_selector.h,
	src/pseudocolor_selector.h, src/frame_info.cpp,